--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/nicknameTxt"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
-                android:background="@drawable/edit_text_border"
+                android:background="@drawable/edit_text_border2"
                 android:fontFamily="@font/yatra"
                 android:hint="Nickname"
                 android:layout_marginLeft="90dp"
@@ -68,11 +68,24 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/WhiteSmoke"
                 android:textSize="20sp"
-                app:cornerRadius="20dp"
+                app:cornerRadius="0dp"
                 app:strokeColor="@color/WhiteSmoke"
                 app:strokeWidth="2dp" />
 
         </LinearLayout>
+        <SeekBar
+            android:id="@+id/levelBar"
+            style="@style/Widget.AppCompat.SeekBar.Discrete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="20"
+            android:progress="3"
+            android:progressTint="@color/WhiteSmoke"
+            android:progressBackgroundTint="@color/WhiteSmoke"
+            android:thumb="@drawable/seekbar_thumb"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="70dp"
+            />
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
